# Product_categories__FastAPI-PostgreSQL-SQLAlchemy-Alembic__

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_migrations.py
alembic/: env.py
alembic/versions/: 041c83b5e8a9_init.py
app/: config.py  crud.py  database.py  exceptions.py  init_data.py  main.py  models.py  schemas.py
tests/: test_orders.py
